@@ -19,21 +19,7 @@ $Id$
 from zope.tales.tests.simpleexpr import SimpleExpr
 from zope.tales.tales import ExpressionEngine as Engine
 from zope.tales.tales import _default as Default
-
-from MultiMapping import MultiMapping
-class SafeMapping(MultiMapping):
-    '''Mapping with security declarations and limited method exposure.
-
-    Since it subclasses MultiMapping, this class can be used to wrap
-    one or more mapping objects.  Restricted Python code will not be
-    able to mutate the SafeMapping or the wrapped mappings, but will be
-    able to read any value.
-    '''
-    __allow_access_to_unprotected_subobjects__ = 1
-    push = pop = None
-
-    _push = MultiMapping.push
-    _pop = MultiMapping.pop
+from Products.PageTemplates.Expressions import SafeMapping
 
 import zope.deprecation
 zope.deprecation.moved("zope.tales.tales", "2.12")
